gcc/testsuite/gdc.test/compilable/test6089.d
// PERMUTE_ARGS:
void main()
{
    extern int[1][1] foo;
}

