gcc/testsuite/gdc.test/fail_compilation/fail47.d
void foo() {}
int _foo;
alias _foo foo;

void main()
{
    foo = 1;
}

